--- a/quiz-pvd/index.html
+++ b/quiz-pvd/index.html
@@ -89,7 +89,7 @@ Usted y otras 425 personas están viendo esta página en este momento!
 <button onclick="next4()" class="btn btn-primary btn-lg btn-block">VER VIDEO COMPLETO</button>
 </div>
 <hr>
-<p class="mt-3 smal">Este sitio no está afiliado a Facebook ni a ninguna entidad de Facebook..</b> Después de dejar Facebook, no es su responsabilidad, sino la de nuestro sitio. Hacemos todo lo posible para indicar claramente y mostrar todas las pruebas y utilizamos resultados reales. No vendemos sucorreo electrónico o cualquier información a terceros. Nunca hacemos ningún tipo de spam.</p>
+<p class="mt-3 smal">Este sitio web no está afiliado a ninguna a cualquier plataforma de terceros. Una vez que dejas cualquier plataforma, no responsabilidad de ellos, es responsabilidad de nuestro sitio web.</p>
 <p><a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidad</a> | <a href="https://protocolozerobarriga.com/termos" style="color: black;">Condiciones de uso</a></p>
 <p>Copyright 2022 - Protocolo Vientre Delgado ® Todos los derechos reservados.</p>
 </div>
